[tool.poetry]
name = "aiohttp-spyne"
version = "1.4.0"
description = "Aiohttp transport for Spyne RPC library"
authors = ["Tuomas Virtanen <katajakasa@gmail.com>"]
license = "LGPL-2.1-only"
readme = "README.md"
homepage = "https://github.com/katajakasa/aiohttp-spyne"
repository = "https://github.com/katajakasa/aiohttp-spyne"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
keywords = ["asyncio", "aiohttp", "spyne", "soap"]
packages = [
    {include = "aiohttp_spyne"},
    {include = "aiohttp_spyne/py.typed"},
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.0"
spyne = "^2.14.0"

[tool.poetry.dev-dependencies]
zeep = {extras = ["async"], version = "^4.1.0"}
black = "^22.6.0"
mypy = "^0.961"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.7
ignore_missing_imports = true
