[tool.poetry]
name = "aiohttp-spyne"
version = "1.5.0"
description = "Aiohttp transport for Spyne RPC library"
authors = ["Tuomas Virtanen <katajakasa@gmail.com>"]
license = "LGPL-2.1-only"
readme = "README.md"
homepage = "https://github.com/katajakasa/aiohttp-spyne"
repository = "https://github.com/katajakasa/aiohttp-spyne"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
keywords = ["asyncio", "aiohttp", "spyne", "soap"]
packages = [
    {include = "aiohttp_spyne"},
    {include = "aiohttp_spyne/py.typed"},
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.0.0"
spyne = "^2.14.0"

[tool.poetry.dev-dependencies]
zeep = {extras = ["async"], version = "^4.1.0"}
black = "^24.3.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.21.1"
pytest-aiohttp = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
